--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "replaceme"
-version = "0.1.0"
+name = "zeal_cli"
+version = "0.1.0a1"
 description = ""
-authors = ["JMT <contact@joshinshaker.com>"]
+authors = ["Josh Levin (Morpheus636) <josh@joshinshaker.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
