--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Josh Levin (Morpheus636) <josh@joshinshaker.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+requests = "^2.27.1"
+beautifulsoup4 = "^4.10.0"
+lxml = "^4.8.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
