--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ flake8 = "^3.9.2"
 isort = "^5.9.3"
 pytest = "^6.2.4"
 pre-commit = "^2.13.0"
+pyinstaller = "^4.9"
 
 [tool.black]
 line-length = 100
