--- a/.github/workflows/build_binaries.yml
+++ b/.github/workflows/build_binaries.yml
@@ -29,11 +29,11 @@ jobs:
         run: poetry install
 
       - name: Build Pyinstaller
-        run: poetry run pyinstaller --onefile ./src/zeal_cli.py --name zeal-cli-${{ matrix.os[1] }}
+        run: poetry run pyinstaller --onefile ./src/zeal_cli.py --name zeal-cli
 
       - name: Upload Executables
         uses: softprops/action-gh-release@v0.1.14
         with:
           files: |
-            dist/zeal-cli-${{ matrix.os[1] }}
-            dist/zeal-cli-${{ matrix.os[1] }}.exe
+            dist/zeal-cli
+            dist/zeal-cli.exe
