--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -8,7 +8,7 @@ body:
   attributes:
     label: Feature Request
     placeholder: Describe the feature you would like added.
-    value: ""
+    value: "Feature Request"
   validations:
     required: true
 - type: checkboxes
