(#23) Combined code analysis actions

--- a/.github/workflows/code_analysis_pull.yml
+++ b/.github/workflows/code_analysis_pull.yml
@@ -1,6 +1,8 @@
 name: Code Analysis on Pull
 
 on:
+  push:
+    branches: [ main, release/** ]
   pull_request:
     branches: [ main, release/** ]
 
