(#23) Added a build test to the test action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Install Packages
         run: poetry install
 
-      - name: Test
+      - name: Run PyTest
         run: poetry run pytest
+
+      - name: Build Test
+        run: make build
