--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - run: git fetch --prune --tags --unshallow
 
       - name: Setup Python
         uses: actions/setup-python@v1
