--- a/.github/workflows/build_binaries.yml
+++ b/.github/workflows/build_binaries.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [[ubuntu-latest, windows-latest]]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
       - name: Checkout Code
