--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
       - name: Checkout Code
@@ -32,6 +32,3 @@ jobs:
 
       - name: Run PyTest
         run: poetry run pytest
-
-      - name: Build Test
-        run: make build
