--- a/.github/workflows/build_binaries.yml
+++ b/.github/workflows/build_binaries.yml
@@ -63,11 +63,11 @@ jobs:
       - name: download artifacts
         uses: actions/download-artifact@v3
         with:
-          path: ~/artifacts
+          path: /home/runner/artifacts
 
       - name: Upload Executables
         uses: softprops/action-gh-release@v0.1.14
         with:
           files: |
-            ~/artifacts/zeal-cli
-            ~/artifacts/zeal-cli.exe
+            /home/runner/artifacts/zeal-cli
+            /home/runner/artifacts/zeal-cli.exe
