--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ pre-commit = "^2.13.0"
 pyinstaller = "^4.9"
 GitPython = "^3.1.27"
 
+[tool.poetry.scripts]
+zeal-cli = "zeal_cli:main"
+
 [tool.black]
 line-length = 100
 target-version = ['py39']
