--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "zeal_cli"
 version = "v1.2.0"
 description = ""
+license = "GPL-3.0-or-later"
 readme = "docs/README.md"
 repository = "https://github.com/morpheus636/zeal-cli"
 authors = ["Josh Levin <morpheus636@morpheus636.com>"]
