--- a/.github/workflows/build_binaries.yml
+++ b/.github/workflows/build_binaries.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build Pyinstaller
         run: |
           poetry run python ./build_system/update_version.py
-          poetry run pyinstaller --onefile ./src/zeal_cli.py --name zeal-cli
+          poetry run pyinstaller --onefile ./src/zeal_cli/__main__.py --name zeal-cli
 
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v3
